# estacode_chatbot

./: .gitignore  app.py  pyproject.toml
src/core/: ingest.py
