[project]
name = "estacode-chatbot"
version = "0.1.0"
description = "This is a Chatbot that let the user query the Estacode—a comprehensive set of laws, rules, and instructions regarding the terms and conditions for government civil servants in Pakistan."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]
