[project]
name = "estacode-chatbot"
version = "0.1.0"
description = "A local-first agentic RAG system for the Pakistan Estacode book, 2021 edition."
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = "MIT"
dependencies = [
    "chromadb>=1.5.8",
    "docling>=2.90.0",
    "docling-core>=2.74.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
]
